Read users from a user export CSV, and batch/throttle sending